--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
         <div class="p-divider">
         </div>
 
+        <div class="container">
+            <div class="grid_1">
+                <p class="o-s-strong">
+                    1. Share on Facebook
+                </p>
+            </div>
+            <div class="grid_1">
+                <p class="o-s-strong">
+                    2. Post on Twitter
+                </p>
+            </div>
+            <div class="grid_1">
+                <p class="o-s-strong">
+                    3. Watch our video
+                </p>
+            <div>
+
+        </div>
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
