progress bar added pushing in case internet shuts off again

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -58,23 +59,30 @@
                 <p class="o-s-strong">
                     1. Share on Facebook
                 </p>
+                <a class="js-bargraph" href="#">Placeholder button</a>
             </div>
             <div class="grid_1">
                 <p class="o-s-strong">
                     2. Post on Twitter
                 </p>
+                <a class="js-bargraph" href="#">Placeholder button</a>
             </div>
             <div class="grid_1">
                 <p class="o-s-strong">
                     3. Watch our video
                 </p>
-            <div>
+                <a class="js-bargraph" href="#">Placeholder button</a>
+            </div>
+
+            <div class="grid_3" id="progressbar">
+            </div>
 
         </div>
 
 
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/themes/smoothness/jquery-ui.css" />
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
