--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Facebook Open Graph tags -->
-        <meta property="og:url" content="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d"/>
+        <meta property="og:url" content="http://www.kickstarter.com/"/>
         <meta property="og:title" content="Vidcode Support"/>
+        <meta property="og:image" content="/img/heart-icon.png"/>
+        <meta property="og:site_name" content="Vidcode"/>
+        <meta property="og:description" content="Vidcode lets you customize your own videos with code. You can upload videos from Instagram and hack the filters. Start coding your own videos now!"/>
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <script src="/js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="/js/vendor/modernizr-2.6.2.min.js"></script>f
 
     </head>
     <body>
@@ -39,7 +42,7 @@
                     We hope you’re having an amazing day.
                 </p>
                 <p>
-                    You’re here because you’re awesome. When you share something, people pay attention. Please take a moment to tell your friends about Vidcode.
+                    You’re here because you’re awesome. When you share something, people pay attention. Please take a moment to tell your friends about Vidcode's Kickstarter.
                 </p>
                 <p class="o-s-strong">
                     Thank you!
@@ -74,15 +77,12 @@
                 <p class="o-s-strong">
                     3. Watch our video
                 </p>
-                <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">KS Placeholder</a>
+                <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">Play</a>
             </div>
 
-            <!-- <div class="addthis_sharing_toolbox"></div> -->
+            <div class="addthis_sharing_toolbox"></div>
 
-            <div class="addthis_native_toolbox"></div>
-
-            <div class="grid_3" id="progressbar">
-            </div>
+            <!-- <div class="addthis_native_toolbox"></div> -->
 
         </div>
 
@@ -92,6 +92,18 @@
         <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="/js/plugins.js"></script>
         <script src="/js/main.js"></script>
-        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52095d944f19d43d"></script>        
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53e5544e45115c2b"></script>
+        <script type="text/javascript">
+        var addthis_share = addthis_share || {}
+        addthis_share = {
+            passthrough : {
+                twitter: {
+                    text: "Support Vidcode's Kickstarter! www.kickstarter.com"
+                }
+            }
+        }
+        </script>
+        <!-- // <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52095d944f19d43d"></script>         -->
     </body>
 </html>
