--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <p class="o-s-strong">
                     1. Share on Facebook
                 </p>
+                <a class="addthis_button_facebook_share" fb:share:layout="button_count"></a>                
                 <!-- <a class="js-bargraph" href="#">Placeholder button</a> -->
             </div>
             <div class="grid_1">
@@ -80,10 +81,10 @@
                 <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">Play</a>
             </div>
 
-            <div class="addthis_sharing_toolbox"></div>
-
-            <!-- <div class="addthis_native_toolbox"></div> -->
-
+            <div class ="addthis_container">
+                
+                <div class="addthis_sharing_toolbox" data-url="http://www.kickstarter.com" data-title="Vidcode Kickstarter"></div>               
+            </div>
         </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -99,7 +100,7 @@
         addthis_share = {
             passthrough : {
                 twitter: {
-                    text: "Support Vidcode's Kickstarter! www.kickstarter.com"
+                    text: "Support Vidcode's Kickstarter!"
                 }
             }
         }
