--- a/index.html
+++ b/index.html
@@ -64,27 +64,31 @@
                 <p class="o-s-strong">
                     1. Share on Facebook
                 </p>
+ 
+            <div class ="addthis_container">
                 <a class="addthis_button_facebook_share" fb:share:layout="button_count"></a>                
-                <!-- <a class="js-bargraph" href="#">Placeholder button</a> -->
+                <!-- <a class="js-bargraph" href="#">Placeholder button</a> -->                     
+            </div>
+
             </div>
             <div class="grid_1">
                 <p class="o-s-strong">
                     2. Post on Twitter
                 </p>
-                <!-- <a class="js-bargraph" href="#">Placeholder</a> -->
+                <div class ="addthis_container">
+                    <div class="addthis_toolbox addthis_default_style">
+                         <a class="addthis_button_tweet"></a> 
+                    </div>                             
+                </div>
             </div>
             
             <div class="grid_1">
                 <p class="o-s-strong">
                     3. Watch our video
                 </p>
-                <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">Play</a>
+                <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">Play ▸</a>
             </div>
 
-            <div class ="addthis_container">
-                
-                <div class="addthis_sharing_toolbox" data-url="http://www.kickstarter.com" data-title="Vidcode Kickstarter"></div>               
-            </div>
         </div>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
