--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         addthis_share = {
             passthrough : {
                 twitter: {
-                    text: "Support Vidcode's Kickstarter!"
+                    text: "Support Vidcode's Kickstarter!",
+                    url: "http://www.kickstarter.com"
                 }
             }
         }
