--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Facebook Open Graph tags -->
-        <meta property="og:url" content="http://www.kickstarter.com/"/>
+        <meta property="og:url" content="http://kck.st/1po2ul5"/>
         <meta property="og:title" content="Vidcode Support"/>
         <meta property="og:image" content="/img/heart-icon.png"/>
         <meta property="og:site_name" content="Vidcode"/>
@@ -42,7 +42,7 @@
                     We hope you’re having an amazing day.
                 </p>
                 <p>
-                    You’re here because you’re awesome. When you share something, people pay attention. Please take a moment to tell your friends about Vidcode's Kickstarter.
+                    You’re here because you’re awesome. When you share something, people pay attention. Please take a moment to tell your friends about the Vidcode Kickstarter.
                 </p>
                 <p class="o-s-strong">
                     Thank you!
@@ -76,7 +76,7 @@
                     2. Post on Twitter
                 </p>
                 <div class ="addthis_container">
-                    <div class="addthis_toolbox addthis_default_style">
+                    <div class="addthis_toolbox addthis_default_style" addthis:url="http://kck.st/1po2ul5">
                          <a class="addthis_button_tweet"></a> 
                     </div>                             
                 </div>
@@ -86,7 +86,7 @@
                 <p class="o-s-strong">
                     3. Watch our video
                 </p>
-                <a class="js-bargraph" href="https://www.kickstarter.com/projects/2059265636/1343913774?token=ec2c5d6d">Play ▸</a>
+                <a class="js-bargraph" href="http://kck.st/1po2ul5">Play ▸</a>
             </div>
 
         </div>
@@ -104,8 +104,7 @@
         addthis_share = {
             passthrough : {
                 twitter: {
-                    text: "Support Vidcode's Kickstarter!",
-                    url: "http://www.kickstarter.com"
+                    text: "Vidcode teaches TEENS computer programming by enabling them to customize videos with code. Support here:"
                 }
             }
         }
